# basic-sph-houdini

./: CMakeLists.txt  README.md  solver.cpp  solver.h
PCISPH_simulation_node/: CMakeLists.txt  Entrance.cpp  point_neighbor_search.cpp  point_neighbor_search.h  size.h  solver.cpp  solver.h  sph_kernel.h
PCISPH_simulation_node_new/: PCISPH_solver.cpp  PCISPH_solver.h
basicSPH_simulation_node/: CMakeLists.txt  Entrance.cpp  Scene.hipnc  solver.cpp  solver.h
basicSPH_simulation_normal/: CMakeLists.txt  Scene.hipnc
basicSPH_simulation_normal/output/: particles_1.geo  particles_10.geo  particles_100.geo  particles_11.geo  particles_12.geo  particles_13.geo  particles_14.geo  particles_15.geo  particles_16.geo  particles_17.geo  particles_18.geo  particles_19.geo  particles_2.geo  particles_20.geo  particles_21.geo  particles_22.geo  particles_23.geo  particles_24.geo  particles_25.geo  particles_26.geo  particles_27.geo  particles_28.geo  particles_29.geo  particles_3.geo  particles_30.geo  particles_31.geo  particles_32.geo  particles_33.geo  particles_34.geo  particles_35.geo  particles_36.geo  particles_37.geo  particles_38.geo  particles_39.geo  particles_4.geo  particles_40.geo  particles_41.geo  particles_42.geo  particles_43.geo  particles_44.geo  (+60 more)
basicSPH_simulation_normal/src/: HoudiniFileDumpHelper.cpp  HoudiniFileDumpHelper.h  SPHParticleHoudiniIO.cpp  SPHParticleHoudiniIO.h  main.cpp
pbf_simulation_node/: CMakeLists.txt  Entrance.cpp  SpatialGrid.h  SpatialGrid.hpp  solver.cpp  solver.h  sph_kernel.cpp
